@@ -2,11 +2,11 @@ package ca.ulaval.glo4003.trotti.infrastructure.trip.mappers;
 
 import ca.ulaval.glo4003.trotti.domain.account.values.Email;
 import ca.ulaval.glo4003.trotti.domain.account.values.Idul;
-import ca.ulaval.glo4003.trotti.domain.commons.Id;
 import ca.ulaval.glo4003.trotti.domain.order.values.Semester;
 import ca.ulaval.glo4003.trotti.domain.order.values.Session;
 import ca.ulaval.glo4003.trotti.domain.trip.entities.RidePermit;
 import ca.ulaval.glo4003.trotti.domain.trip.entities.Traveler;
+import ca.ulaval.glo4003.trotti.domain.trip.values.RidePermitId;
 import ca.ulaval.glo4003.trotti.fixtures.TravelerFixture;
 import ca.ulaval.glo4003.trotti.infrastructure.trip.repositories.records.RidePermitRecord;
 import ca.ulaval.glo4003.trotti.infrastructure.trip.repositories.records.TravelerRecord;
@@ -20,7 +20,7 @@ class TravelerPersistenceMapperTest {
 
     private static final Idul IDUL = Idul.from("IDUL");
     private static final Email EMAIL = Email.from("john.doe@ulaval.ca");
-    private static final Id PERMIT_ID = Id.randomId();
+    private static final RidePermitId PERMIT_ID = RidePermitId.randomId();
     private static final List<RidePermitRecord> RIDE_PERMIT_RECORDS =
             List.of(new RidePermitRecord(PERMIT_ID, IDUL, new Session(Semester.FALL,
                     LocalDate.parse("2025-09-02"), LocalDate.parse("2025-12-12"))));
@@ -81,9 +81,11 @@ class TravelerPersistenceMapperTest {
 
     void assertPermitsEquals(List<RidePermit> ridePermits,
             List<RidePermitRecord> ridePermitRecords) {
-        Assertions.assertEquals(ridePermits.get(0).getId(), ridePermitRecords.get(0).permitId());
-        Assertions.assertEquals(ridePermits.get(0).getIdul(), ridePermitRecords.get(0).idul());
-        Assertions.assertEquals(ridePermits.get(0).getSession(),
-                ridePermitRecords.get(0).session());
+        Assertions.assertEquals(ridePermits.getFirst().getId(),
+                ridePermitRecords.getFirst().permitId());
+        Assertions.assertEquals(ridePermits.getFirst().getIdul(),
+                ridePermitRecords.getFirst().idul());
+        Assertions.assertEquals(ridePermits.getFirst().getSession(),
+                ridePermitRecords.getFirst().session());
     }
 }
